--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 torch = "^2.3.0"
+numpy = "^1.26.4"
+transformers = "^4.41.1"
 
 
 [build-system]
