--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ lightning = "^2.2.5"
 tqdm = "^4.66.4"
 
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.4"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
